--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,12 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
-        "bensampo/laravel-enum": "^4.1",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.65",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
+        "myclabs/php-enum": "^1.8",
         "spatie/laravel-data": "^1.2"
     },
     "require-dev": {
