--- a/.env.example
+++ b/.env.example
@@ -52,3 +52,7 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+WOO_CUSTOMER_KEY=add_your_customer_key_here
+WOO_CUSTOMER_SECRET=add_yur_customer_secret_here
+WOO_CUSTOMER_DOMAIN=http://example.com
