--- a/composer.json
+++ b/composer.json
@@ -52,7 +52,8 @@
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
         ],
-        "test": "vendor/bin/phpunit"
+        "test": "vendor/bin/phpunit",
+        "model-docs": "php artisan ide-helper:models"
     },
     "extra": {
         "laravel": {
