--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/tinker": "^2.5",
         "myclabs/php-enum": "^1.8",
         "spatie/laravel-data": "^1.2",
+        "spatie/laravel-permission": "^5.4",
         "tightenco/ziggy": "^1.0",
         "web64/laravel-cli-colors": "^0.20.0"
     },
