--- a/composer.json
+++ b/composer.json
@@ -5,12 +5,13 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
-        "php": "^7.3|^8.0",
+        "php": "8.1",
         "automattic/woocommerce": "^3.0",
         "cknow/laravel-money": "^6.1",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
-        "inertiajs/inertia-laravel": "^0.4.3",
+        "inertiajs/inertia-laravel": "^0.5.2",
+        "joelbutcher/socialstream": "^3.3",
         "laravel/framework": "^8.65",
         "laravel/jetstream": "^2.5",
         "laravel/sanctum": "^2.8",
@@ -71,7 +72,10 @@
     "config": {
         "optimize-autoloader": true,
         "preferred-install": "dist",
-        "sort-packages": true
+        "sort-packages": true,
+        "platform": {
+            "php": "8.1.0"
+        }
     },
     "minimum-stability": "dev",
     "prefer-stable": true
