--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
         "tailwindcss": "^3.0.0",
         "vue": "^3.0.5",
         "vue-loader": "^16.1.2"
+    },
+    "dependencies": {
+        "vue-unicons": "^3.3.1"
     }
 }
