fixing value for date_created null

--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "web64/laravel-cli-colors": "^0.20.0"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.6",
         "barryvdh/laravel-ide-helper": "^2.10",
         "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.9.1",
