improving queues and order controlls

--- a/.env.example
+++ b/.env.example
@@ -56,3 +56,6 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 WOO_CUSTOMER_KEY=add_your_customer_key_here
 WOO_CUSTOMER_SECRET=add_yur_customer_secret_here
 WOO_CUSTOMER_DOMAIN=http://example.com
+
+ALGOLIA_APP_ID=null
+ALGOLIA_SECRET=null
