--- a/.env.example
+++ b/.env.example
@@ -59,3 +59,8 @@ WOO_CUSTOMER_DOMAIN=http://example.com
 
 ALGOLIA_APP_ID=null
 ALGOLIA_SECRET=null
+SCOUT_IDENTIFY=true
+
+STRIPE_KEY=your-stripe-key
+STRIPE_SECRET=your-stripe-secret
+CASHIER_CURRENCY=usd
