--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "vue-loader": "^16.1.2"
     },
     "dependencies": {
+        "moment": "^2.29.1",
         "numeral": "^2.0.6",
         "vue-unicons": "^3.3.1"
     }
