--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "laravel/sanctum": "^2.8",
         "laravel/scout": "^9.4",
         "laravel/tinker": "^2.5",
+        "maatwebsite/excel": "^3.1",
         "myclabs/php-enum": "^1.8",
         "spatie/laravel-data": "^1.2",
         "spatie/laravel-permission": "^5.4",
