--- a/composer.json
+++ b/composer.json
@@ -8,13 +8,12 @@
         "php": "8.1",
         "algolia/algoliasearch-client-php": "^3.2",
         "automattic/woocommerce": "^3.0",
-        "cknow/laravel-money": "^6.1",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "inertiajs/inertia-laravel": "^0.5.2",
         "joelbutcher/socialstream": "^3.3",
         "laravel/cashier": "^13.8",
-        "laravel/framework": "^8.75",
+        "laravel/framework": "^9.0",
         "laravel/jetstream": "^2.5",
         "laravel/sanctum": "^2.8",
         "laravel/scout": "^9.4",
@@ -29,12 +28,12 @@
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.6",
         "barryvdh/laravel-ide-helper": "^2.10",
-        "facade/ignition": "^2.5",
+        "spatie/laravel-ignition": "^1.0",
         "fakerphp/faker": "^1.9.1",
         "laravel/breeze": "^1.6",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^5.10",
+        "nunomaduro/collision": "^6.0",
         "phpunit/phpunit": "^9.5.10",
         "thedevsaddam/laravel-schema": "^2.0"
     },
