--- a/.env.example
+++ b/.env.example
@@ -3,24 +3,28 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
+APP_URL=http://localhost:8000
+FRONTEND_URL=http://localhost:3000
+ASSET_DOMAIN=https://kindhumans.com
+CLIENT_DOMAIN=https://kind.humans # Replace with the local store domain.
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_CONNECTION=pgsql
+DB_HOST=localhost
+DB_PORT=5432
+DB_DATABASE=databasename
+DB_USERNAME=postgres
+DB_PASSWORD=postgres
 
 DB_DATABASE_TEST=woo_omni_test
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DRIVER=local
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=database
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
 
@@ -56,6 +60,13 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 WOO_CUSTOMER_KEY=add_your_customer_key_here
 WOO_CUSTOMER_SECRET=add_yur_customer_secret_here
 WOO_CUSTOMER_DOMAIN=http://example.com
+
+KINDHUMANS_SYNC_PER_PAGE=5
+KINDHUMANS_SYNC_PAGINATE=5
+
+GOOGLE_CLIENT_ID=578350767445-bblhgo7rfa9cjale719gsb184d8t6j3j.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+GOOGLE_REDIRECT=http://localhost:8000/oauth/google/callback
 
 ALGOLIA_APP_ID=null
 ALGOLIA_SECRET=null
