--- a/.env.example
+++ b/.env.example
@@ -75,3 +75,5 @@ SCOUT_IDENTIFY=true
 STRIPE_KEY=your-stripe-key
 STRIPE_SECRET=your-stripe-secret
 CASHIER_CURRENCY=usd
+
+MEMBERSHIP_DEFAULT_GIFT_PRODUCT_ID=544443
