--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dependencies": {
         "moment": "^2.29.1",
         "numeral": "^2.0.6",
-        "vue-unicons": "^3.3.1"
+        "vue-unicons": "^3.3.1",
+        "vue3-datepicker": "^0.3.2"
     }
 }
