--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
         "lodash": "^4.17.19",
         "postcss": "^8.2.13",
         "postcss-import": "^12.0.1",
-        "tailwindcss": "^3.0.0",
+        "tailwindcss": "3.0.18",
         "vue": "^3.0.5",
         "vue-loader": "^16.1.2"
     },
