--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "laravel/tinker": "^2.5",
         "maatwebsite/excel": "^3.1",
         "myclabs/php-enum": "^1.8",
+        "predis/predis": "^1.1",
         "spatie/laravel-data": "^1.2",
         "spatie/laravel-permission": "^5.4",
         "tightenco/ziggy": "^1.0",
