--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,10 @@
-APP_NAME=Laravel
+APP_NAME=Kindhumans Admin
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
-APP_URL=http://localhost:8000
-FRONTEND_URL=http://localhost:3000
-ASSET_DOMAIN=https://kindhumans.com
+APP_URL=http://localhost:3030
+FRONTEND_URL=http://localhost:3030
+ASSET_DOMAIN=https://kindhumans.com # Should no change, but if you want to redirect the asset urls base domain to another domain, change it.
 CLIENT_DOMAIN=https://kind.humans # Replace with the local store domain.
 
 LOG_CHANNEL=stack
@@ -15,14 +14,14 @@ LOG_LEVEL=debug
 DB_CONNECTION=pgsql
 DB_HOST=localhost
 DB_PORT=5432
-DB_DATABASE=databasename
+DB_DATABASE=omnipress
 DB_USERNAME=postgres
 DB_PASSWORD=postgres
 
 DB_DATABASE_TEST=woo_omni_test
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=file
+CACHE_DRIVER=redis
 FILESYSTEM_DRIVER=local
 QUEUE_CONNECTION=database
 SESSION_DRIVER=database
@@ -35,13 +34,13 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
+MAIL_HOST=smtp.mailtrap.io
+MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_FROM_ADDRESS=noreply@kindhumans.com
 MAIL_FROM_NAME="${APP_NAME}"
+MAIL_ENCRYPTION=null
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
