Updating .env.example with better default values

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Kindhumans Admin
+APP_NAME=KindhumansAdmin
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -12,7 +12,7 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=pgsql
-DB_HOST=localhost
+DB_HOST=pgsql
 DB_PORT=5432
 DB_DATABASE=omnipress
 DB_USERNAME=postgres
@@ -29,13 +29,13 @@ SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
 
-REDIS_HOST=127.0.0.1
+REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
+MAIL_HOST=mailhog
+MAIL_PORT=1025
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_FROM_ADDRESS=noreply@kindhumans.com
@@ -67,9 +67,9 @@ GOOGLE_CLIENT_ID=578350767445-bblhgo7rfa9cjale719gsb184d8t6j3j.apps.googleuserco
 GOOGLE_CLIENT_SECRET=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
 GOOGLE_REDIRECT=http://localhost:8000/oauth/google/callback
 
-ALGOLIA_APP_ID=null
-ALGOLIA_SECRET=null
-SCOUT_IDENTIFY=true
+SCOUT_DRIVER=meilisearch
+MEILISEARCH_HOST=meilisearch:7700
+MEILISEARCH_KEY=masterKey
 
 STRIPE_KEY=your-stripe-key
 STRIPE_SECRET=your-stripe-secret
