--- a/.env.example
+++ b/.env.example
@@ -2,10 +2,10 @@ APP_NAME=KindhumansAdmin
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost:3030
-FRONTEND_URL=http://localhost:3030
-ASSET_DOMAIN=https://kindhumans.com # Should no change, but if you want to redirect the asset urls base domain to another domain, change it.
-CLIENT_DOMAIN=https://kind.humans # Replace with the local store domain.
+APP_URL=http://localhost:8000
+FRONTEND_URL=http://localhost:8000
+ASSET_DOMAIN=https://kindhumans.com
+CLIENT_DOMAIN=https://your-local-host-here
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -56,16 +56,18 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-WOO_CUSTOMER_KEY=add_your_customer_key_here
-WOO_CUSTOMER_SECRET=add_yur_customer_secret_here
-WOO_CUSTOMER_DOMAIN=http://example.com
+WOO_CUSTOMER_KEY=ck_5f944eb60ada2cfb7ffafb923603f28b99f2dd80
+WOO_CUSTOMER_SECRET=cs_c20d091b9a06ed2e0e4530f3e1d0fd5ef97ea049
+WOO_CUSTOMER_DOMAIN=http://host.docker.internal:10003
+WOO_TIMEOUT=50
 
 KINDHUMANS_SYNC_PER_PAGE=5
 KINDHUMANS_SYNC_PAGINATE=5
 
+ACTIVATE_TRADITIONAL_REGISTRATION=false
 GOOGLE_CLIENT_ID=578350767445-pbhibf17vh47j2oa7cslcmpl8abfsbmm.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
-GOOGLE_REDIRECT=http://localhost:3030/oauth/google/callback
+GOOGLE_REDIRECT=http://localhost:8000/oauth/google/callback
 
 SCOUT_DRIVER=meilisearch
 MEILISEARCH_HOST=meilisearch:7700
