Adding Scout Prefix

--- a/.env.example
+++ b/.env.example
@@ -72,6 +72,7 @@ GOOGLE_REDIRECT=http://localhost:8000/oauth/google/callback
 SCOUT_DRIVER=meilisearch
 MEILISEARCH_HOST=meilisearch:7700
 MEILISEARCH_KEY=masterKey
+MEILISEARCH_PREFIX=dev
 
 STRIPE_KEY=your-stripe-key
 STRIPE_SECRET=your-stripe-secret
