--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,7 @@ DB_DATABASE_TEST=woo_omni_test
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=redis
+CACHE_PREFIX=local_
 FILESYSTEM_DRIVER=local
 QUEUE_CONNECTION=database
 SESSION_DRIVER=database
@@ -32,6 +33,7 @@ MEMCACHED_HOST=127.0.0.1
 REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
+REDIS_PREFIX=local_
 
 MAIL_MAILER=smtp
 MAIL_HOST=mailhog
