--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/jetstream": "^2.5",
         "laravel/sanctum": "^2.8",
         "laravel/scout": "^9.4",
+        "laravel/slack-notification-channel": "^2.4",
         "laravel/tinker": "^2.5",
         "maatwebsite/excel": "^3.1",
         "meilisearch/meilisearch-php": "^0.22.0",
