Adding low of stock notification

--- a/.env.example
+++ b/.env.example
@@ -81,3 +81,4 @@ STRIPE_SECRET=your-stripe-secret
 CASHIER_CURRENCY=usd
 
 MEMBERSHIP_DEFAULT_GIFT_PRODUCT_ID=544443
+NOTIFICATION_EMAILS=martijn@kindhumans,dgaitan@kindhumans.com
