--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "8.1",
         "algolia/algoliasearch-client-php": "^3.2",
         "automattic/woocommerce": "^3.0",
+        "cknow/laravel-money": "^6.5",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "http-interop/http-factory-guzzle": "^1.2",
