Adding printforia order detail

--- a/.env.example
+++ b/.env.example
@@ -82,3 +82,5 @@ CASHIER_CURRENCY=usd
 
 MEMBERSHIP_DEFAULT_GIFT_PRODUCT_ID=544443
 NOTIFICATION_EMAILS=martijn@kindhumans,dgaitan@kindhumans.com
+
+PRINTFORIA_API_KEY=
