--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,8 @@
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^6.0",
+        "pestphp/pest": "^1.21",
+        "pestphp/pest-plugin-laravel": "^1.2",
         "phpunit/phpunit": "^9.5.10",
         "spatie/laravel-ignition": "^1.0",
         "thedevsaddam/laravel-schema": "^2.0"
@@ -86,6 +88,9 @@
         "platform-check": false,
         "platform": {
             "php": "8.1.0"
+        },
+        "allow-plugins": {
+            "pestphp/pest-plugin": true
         }
     },
     "platform": {
