--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -32,4 +32,7 @@ jobs:
         run: php artisan key:generate
 
       - name: Execute tests
+        env:
+          DB_CONNECTION: sqlite
+          DB_DATABASE: database/database.sqlite
         run: vendor/bin/pest
