maybe fixing the tests

--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -34,5 +34,5 @@ jobs:
       - name: Execute tests
         env:
           DB_CONNECTION: sqlite
-          DB_DATABASE: database/database.sqlite
+          DB_DATABASE: ":memory:"
         run: vendor/bin/pest
