updating laravel.yml

--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -30,6 +30,9 @@ jobs:
 
       - name: Generate app key
         run: php artisan key:generate
+        
+      - name: Run migrations
+        run: php artisan migrate --no-interaction -vvv
 
       - name: Execute tests
         env:
