--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     },
     "dependencies": {
         "@heroicons/vue": "^1.0.6",
+        "chart.js": "^3.8.0",
         "moment": "^2.29.1",
         "numeral": "^2.0.6",
+        "vue-chartjs": "^4.1.1",
         "vue-unicons": "^3.3.1",
         "vue3-datepicker": "^0.3.2"
     }
