--- a/.env.example
+++ b/.env.example
@@ -84,3 +84,4 @@ MEMBERSHIP_DEFAULT_GIFT_PRODUCT_ID=544443
 NOTIFICATION_EMAILS=martijn@kindhumans,dgaitan@kindhumans.com
 
 PRINTFORIA_API_KEY=
+USE_CACHE_ON_ANALYTICS=true
