--- a/.env.example
+++ b/.env.example
@@ -85,3 +85,9 @@ NOTIFICATION_EMAILS=martijn@kindhumans,dgaitan@kindhumans.com
 
 PRINTFORIA_API_KEY=
 USE_CACHE_ON_ANALYTICS=true
+
+PRINTFORIA_RETURN_RECIPIENT="Returns Department"
+PRINTFORIA_RETURN_ADDRESS_1="322 Encinitas Blvd., Ste. 185"
+PRINTFORIA_RETURN_CITY=Encinitas
+PRINTFORIA_RETURN_REGION=CA
+PRINTFORIA_RETURN_ZIP=92024
