--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "maatwebsite/excel": "^3.1",
         "meilisearch/meilisearch-php": "^0.22.0",
         "myclabs/php-enum": "^1.8",
+        "opcodesio/log-viewer": "^1.2",
         "predis/predis": "^1.1",
         "spatie/laravel-data": "^1.2",
         "spatie/laravel-permission": "^5.4",
