--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,8 @@
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^6.0",
+        "nunomaduro/larastan": "2.0",
+        "nunomaduro/phpinsights": "^2.6",
         "pestphp/pest": "^1.21",
         "pestphp/pest-plugin-laravel": "^1.2",
         "phpunit/phpunit": "^9.5.10",
@@ -93,7 +95,8 @@
             "php": "8.1.0"
         },
         "allow-plugins": {
-            "pestphp/pest-plugin": true
+            "pestphp/pest-plugin": true,
+            "dealerdirect/phpcodesniffer-composer-installer": true
         }
     },
     "platform": {
