--- a/composer.json
+++ b/composer.json
@@ -93,7 +93,8 @@
             "php": "8.1.0"
         },
         "allow-plugins": {
-            "pestphp/pest-plugin": true
+            "pestphp/pest-plugin": true,
+            "dealerdirect/phpcodesniffer-composer-installer": true
         }
     },
     "platform": {
