--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "laravel/tinker": "^2.5",
         "lorisleiva/laravel-actions": "^2.4",
         "maatwebsite/excel": "^3.1",
-        "meilisearch/meilisearch-php": "^0.22.0",
+        "meilisearch/meilisearch-php": "0.24.2",
         "myclabs/php-enum": "^1.8",
         "opcodesio/log-viewer": "^1.2",
         "predis/predis": "^1.1",
