--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,6 @@
     "license": "MIT",
     "require": {
         "php": "8.1",
-        "algolia/algoliasearch-client-php": "^3.2",
         "automattic/woocommerce": "^3.0",
         "cknow/laravel-money": "^7.0",
         "fruitcake/laravel-cors": "^2.0",
@@ -25,7 +24,7 @@
         "maatwebsite/excel": "^3.1",
         "meilisearch/meilisearch-php": "0.24.2",
         "myclabs/php-enum": "^1.8",
-        "opcodesio/log-viewer": "^1.2",
+        "opcodesio/log-viewer": "1.4.5",
         "predis/predis": "^1.1",
         "spatie/laravel-data": "^1.2",
         "spatie/laravel-permission": "^5.4",
