--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         "spatie/laravel-data": "^1.2",
         "spatie/laravel-permission": "^5.4",
         "tightenco/ziggy": "^1.0",
-        "web64/laravel-cli-colors": "^0.20.0"
+        "web64/laravel-cli-colors": "^0.20.0",
+        "wendelladriel/laravel-validated-dto": "^2.6"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.6",
@@ -93,7 +94,8 @@
         },
         "allow-plugins": {
             "pestphp/pest-plugin": true,
-            "dealerdirect/phpcodesniffer-composer-installer": true
+            "dealerdirect/phpcodesniffer-composer-installer": true,
+            "php-http/discovery": true
         }
     },
     "platform": {
