Adding pre sale releaser

--- a/.env.example
+++ b/.env.example
@@ -91,3 +91,5 @@ PRINTFORIA_RETURN_ADDRESS_1="322 Encinitas Blvd., Ste. 185"
 PRINTFORIA_RETURN_CITY=Encinitas
 PRINTFORIA_RETURN_REGION=CA
 PRINTFORIA_RETURN_ZIP=92024
+
+PRE_SALE_TOKEN=e9677a6345001928d7e9837882b38dd4
