--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "maatwebsite/excel": "^3.1",
         "meilisearch/meilisearch-php": "0.24.2",
         "myclabs/php-enum": "^1.8",
-        "opcodesio/log-viewer": "1.4.4",
+        "opcodesio/log-viewer": "^2.4",
         "predis/predis": "^1.1",
         "spatie/laravel-data": "^1.2",
         "spatie/laravel-permission": "^5.4",
